@@ -1,5 +1,6 @@
 package com.dayquest.userservice.services;
 
+import com.dayquest.userservice.dto.FollowUserDTO;
 import com.dayquest.userservice.ids.FollowId;
 import com.dayquest.userservice.models.Follow;
 import com.dayquest.userservice.models.User;
@@ -14,6 +15,7 @@ import org.springframework.stereotype.Service;
 import java.util.List;
 import java.util.UUID;
 import java.util.concurrent.CompletableFuture;
+import java.util.stream.Collectors;
 
 
 @Service
@@ -74,45 +76,71 @@ public class FollowService {
         return CompletableFuture.completedFuture(followRepository.existsById(followId));
     }
 
+    /**
+     * Returns a page of users that {@code userId} is following, with full profile info.
+     * Returns an empty list if the user does not exist or has no followings.
+     */
     @Async
-    public CompletableFuture<List<UUID>> getFollowedPage(UUID userId, int page, int size) {
+    public CompletableFuture<List<FollowUserDTO>> getFollowedPage(UUID userId, int page, int size) {
         if (userId == null) {
-            return CompletableFuture.completedFuture(null);
+            return CompletableFuture.completedFuture(List.of());
+        }
+
+        User user = userRepository.findById(userId).orElse(null);
+        if (user == null) {
+            return CompletableFuture.completedFuture(List.of());
         }
 
         List<FollowId> followed = followRepository.findFollowIdsByUser(
-                userRepository.findById(userId).orElse(null),
-                PageRequest.of(page, size)
+                user, PageRequest.of(page, size)
         ).getContent();
 
         if (followed.isEmpty()) {
-            return CompletableFuture.completedFuture(null);
+            return CompletableFuture.completedFuture(List.of());
         }
 
         List<UUID> followedIds = followed.stream()
                 .map(FollowId::getFollowedId)
-                .toList();
-        return CompletableFuture.completedFuture(followedIds);
+                .collect(Collectors.toList());
+
+        List<FollowUserDTO> dtos = userRepository.findAllByIds(followedIds).stream()
+                .map(u -> new FollowUserDTO(u.getUuid(), u.getUsername(), u.getProfilePictureUrl()))
+                .collect(Collectors.toList());
+
+        return CompletableFuture.completedFuture(dtos);
     }
 
+    /**
+     * Returns a page of users that follow {@code userId}, with full profile info.
+     * Returns an empty list if the user does not exist or has no followers.
+     */
     @Async
-    public CompletableFuture<List<UUID>> getFollowerPage(UUID userId, int page, int size) {
+    public CompletableFuture<List<FollowUserDTO>> getFollowerPage(UUID userId, int page, int size) {
         if (userId == null) {
-            return CompletableFuture.completedFuture(null);
+            return CompletableFuture.completedFuture(List.of());
+        }
+
+        User user = userRepository.findById(userId).orElse(null);
+        if (user == null) {
+            return CompletableFuture.completedFuture(List.of());
         }
 
         List<FollowId> followers = followRepository.findFollowerIdsByUser(
-                userRepository.findById(userId).orElse(null),
-                PageRequest.of(page, size)
+                user, PageRequest.of(page, size)
         ).getContent();
 
         if (followers.isEmpty()) {
-            return CompletableFuture.completedFuture(null);
+            return CompletableFuture.completedFuture(List.of());
         }
 
         List<UUID> followerIds = followers.stream()
                 .map(FollowId::getUserId)
-                .toList();
-        return CompletableFuture.completedFuture(followerIds);
+                .collect(Collectors.toList());
+
+        List<FollowUserDTO> dtos = userRepository.findAllByIds(followerIds).stream()
+                .map(u -> new FollowUserDTO(u.getUuid(), u.getUsername(), u.getProfilePictureUrl()))
+                .collect(Collectors.toList());
+
+        return CompletableFuture.completedFuture(dtos);
     }
 }
